--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,12 @@ RUN apk update
 
 RUN apk add xsel
 
+ARG VITE_NODE_ADDRESS \
+    VITE_CONTRACT_ADDRESS
+ENV VITE_NODE_ADDRESS=${VITE_NODE_ADDRESS} \
+    VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS} \
+    DISABLE_ESLINT_PLUGIN=true
+
 RUN npm install --force
 
 RUN npm run build
