fix(frontend): add reading state loader

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,8 +13,7 @@ RUN apk add xsel
 ARG VITE_NODE_ADDRESS \
     VITE_CONTRACT_ADDRESS
 ENV VITE_NODE_ADDRESS=${VITE_NODE_ADDRESS} \
-    VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS} \
-    DISABLE_ESLINT_PLUGIN=true
+    VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS}
 
 RUN npm install --force
 
