--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "dev": "vite",
+    "dev:local": "vite --host localhost",
     "build": "vite build",
     "preview": "vite preview"
   },
