chore(frontend): tune config  (#11)
* Config update

* Config update

* Update frontend/package.json

Co-authored-by: Nikita Yutanov <nikitayutanov@gmail.com>

* Fixes after review

* Remove files

---------

Co-authored-by: Nikita Yutanov <nikitayutanov@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "start:local": "vite --host localhost",
     "build": "vite build",
     "preview": "vite preview"
   },
