--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,9 +11,11 @@ RUN apk update
 RUN apk add xsel
 
 ARG VITE_NODE_ADDRESS \
-    VITE_CONTRACT_ADDRESS
+    VITE_CONTRACT_ADDRESS \
+    VITE_NFT_SHOWROOM_URL
 ENV VITE_NODE_ADDRESS=${VITE_NODE_ADDRESS} \
-    VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS}
+    VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS} \
+    VITE_NFT_SHOWROOM_URL=${VITE_NFT_SHOWROOM_URL}
 
 RUN npm install --force
 
