fix(frontend): ipfs gateway links

--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -84,7 +84,8 @@ jobs:
           build-args: |
             VITE_CONTRACT_ADDRESS=${{ secrets.VITE_CONTRACT_ADDRESS }}
             VITE_NODE_ADDRESS=${{ secrets.VITE_NODE_ADDRESS }}
-            VITE_NFT_SHOWROOM_URL=${{ secrets.VITE_NFT_SHOWROOM_URL }}
+            VITE_NFT_SHOWROOM_ADDRESS=${{ secrets.VITE_NFT_SHOWROOM_ADDRESS }}
+            VITE_IPFS_GATEWAY_ADDRESS=${{ secrets.VITE_IPFS_GATEWAY_ADDRESS }}
           tags: ${{ needs.prepair.outputs.image_name }}
 
   deploy-to-k8s:
