--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,10 +12,12 @@ RUN apk add xsel
 
 ARG VITE_NODE_ADDRESS \
     VITE_CONTRACT_ADDRESS \
-    VITE_NFT_SHOWROOM_URL
+    VITE_NFT_SHOWROOM_ADDRESS \
+    VITE_IPFS_GATEWAY_ADDRESS
 ENV VITE_NODE_ADDRESS=${VITE_NODE_ADDRESS} \
     VITE_CONTRACT_ADDRESS=${VITE_CONTRACT_ADDRESS} \
-    VITE_NFT_SHOWROOM_URL=${VITE_NFT_SHOWROOM_URL}
+    VITE_NFT_SHOWROOM_ADDRESS=${VITE_NFT_SHOWROOM_ADDRESS} \
+    VITE_IPFS_GATEWAY_ADDRESS=${VITE_IPFS_GATEWAY_ADDRESS}
 
 RUN npm install --force
 
