fix leaderboard handler

--- a/indexer/.env.example
+++ b/indexer/.env.example
@@ -9,3 +9,5 @@ VARA_ARCHIVE_URL=https://v2.archive.subsquid.io/network/vara-testnet
 VARA_RPC_URL=wss://testnet-archive.vara.network
 VARA_RPC_RATE_LIMIT=20
 VARA_FROM_BLOCK=0
+
+PROGRAM_ID=0x01
