--- a/indexer/.env.example
+++ b/indexer/.env.example
@@ -1,7 +1,4 @@
-DB_NAME=indexer
-DB_PASS=postgres
-DB_USER=postgres
-DB_PORT=5432
+DB_URL=postgres://postgres:postgres@localhost:5432/gear_monitoring
 
 GQL_PORT=4350
 
