--- a/indexer/package.json
+++ b/indexer/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "3.2.0",
+    "@types/express": "5.0.3",
     "@types/node": "24.3.0",
     "typescript": "5.9.2"
   }
