--- a/indexer/tsconfig.json
+++ b/indexer/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "removeComments": true,
-    "strict": false,
+    "strict": true,
     "allowJs": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
