--- a/indexer/.env.example
+++ b/indexer/.env.example
@@ -1,4 +1,4 @@
-DB_URL=postgres://postgres:postgres@localhost:5432/gear_monitoring
+DB_URL=postgres://postgres:postgres@localhost:5432/starship
 
 GQL_PORT=4350
 
