--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "start:local": "vite --host localhost",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen --require dotenv/config"
   },
   "dependencies": {
     "@gear-js/api": "0.42.0",
@@ -20,6 +21,8 @@
     "@tanstack/react-query": "5.81.5",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "graphql": "16.11.0",
+    "graphql-request": "7.2.0",
     "lucide-react": "0.525.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -28,6 +31,7 @@
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.7",
     "@tailwindcss/vite": "4.1.11",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
