--- a/.github/workflows/k8s-frontend-deploy.yml
+++ b/.github/workflows/k8s-frontend-deploy.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: ["*"]
+    paths:
+      - frontend/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
