--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@gear-js/ui": "0.7.0",
     "@gear-js/vara-ui": "0.3.1",
     "@gear-js/wallet-connect": "0.4.2",
+    "@mantine/dates": "8.3.5",
     "@radix-ui/react-slot": "1.2.3",
     "@tanstack/react-query": "5.81.5",
     "class-variance-authority": "0.7.1",
